--- a/src/life-dialogs/life-pattern-chooser.html
+++ b/src/life-dialogs/life-pattern-chooser.html
@@ -112,13 +112,23 @@
       is: 'life-pattern-chooser',
       behaviors: [LifePatternCatalogBehavior],
       properties: {
+        // _selectedPattern: {
+        //   type: Object,
+        //   value: null
+        // },
+        // _domForSelectedPattern: {
+        //   type: Object,
+        //   value: null
+        // },
         _selectedPattern: {
           type: Object,
-          value: null
-        },
-        _domForSelectedPattern: {
-          type: Object,
-          value: null
+          value: function() {
+            return {
+              pattern: null,
+              dom: null,
+              page: null,
+            }
+          }
         }
       },
 
@@ -127,33 +137,52 @@
       },
 
       _patternSelected: function(e) {
-        if(this._domForSelectedPattern) {
-          this._domForSelectedPattern.removeAttribute('selected');
+        // if(this._domForSelectedPattern) {
+        //   this._domForSelectedPattern.removeAttribute('selected');
+        // }
+        if (this._selectedPattern.dom) {
+          this._selectedPattern.dom.removeAttribute('selected');
         }
 
-        this._domForSelectedPattern = e.currentTarget;
+
+        // this._domForSelectedPattern = e.currentTarget;
+        // this._selectedPattern = {
+        //   page: this.currentPage,
+        //   pattern: e.model.get('item'),
+        // };
         this._selectedPattern = {
+          pattern:  e.model.get('item'),
+          dom: e.currentTarget,
           page: this.currentPage,
-          pattern: e.model.get('item'),
         };
 
-        this._domForSelectedPattern.setAttribute('selected', '');
+        // this._domForSelectedPattern.setAttribute('selected', '');
+        this._selectedPattern.dom.setAttribute('selected', '');
       },
       __removeOrRestoreSelectedAttr: function() {
+        // if(this._selectedPattern.page === this.currentPage) {
+        //   // restore
+        //   this._domForSelectedPattern.setAttribute('selected', '');
+        // }
+        // else {
+        //   // remove
+        //   this._domForSelectedPattern.removeAttribute('selected');
+        // }
         if(this._selectedPattern.page === this.currentPage) {
           // restore
-          this._domForSelectedPattern.setAttribute('selected', '');
+          this._selectedPattern.dom.setAttribute('selected', '');
         }
         else {
           // remove
-          this._domForSelectedPattern.removeAttribute('selected');
+          this._selectedPattern.dom.removeAttribute('selected');
         }
       },
       _onPageChanged: function() {
-        if(this._selectedPattern == null) return;
+        if (this._selectedPattern == null || this._selectedPattern.pattern == null) return;
         this.__removeOrRestoreSelectedAttr();
       },
       _closeDialog: function() {
+        if (this._selectedPattern == null || this._selectedPattern.pattern == null) return;
         this.fire('pattern-selected', {pattern: this._selectedPattern.pattern });
       },
 
