--- a/src/life-catalog/life-catalog.html
+++ b/src/life-catalog/life-catalog.html
@@ -22,7 +22,7 @@
     <div class="patterns">
       <template is="dom-repeat" items="[[currentPatterns]]">
         <div class="card">
-          <life-preview-canvas width="240" height="240" auto-play pattern="[[item]]"></life-preview-canvas>
+          <life-preview-canvas width="240" height="240" play-on-hover pattern="[[item]]"></life-preview-canvas>
           <life-icon-button checked="[[item.starred]]" on-tap="_toggleStar"></life-icon-button>
           <div class="card-content">
             <div class="title">[[item.name]]</div>
