--- a/test/life-catalog-data/life-catalog-data_test.html
+++ b/test/life-catalog-data/life-catalog-data_test.html
@@ -21,6 +21,10 @@
     </test-fixture>
 
     <script>
+      let ga = function() {
+        return true;
+      };
+      
       suite('life-catalog', () => {
         let element;
         let catalog;
