--- a/src/life-dialogs/life-pattern-chooser.html
+++ b/src/life-dialogs/life-pattern-chooser.html
@@ -33,7 +33,7 @@
       </paper-dialog-scrollable>
 
       <div class="buttons">
-        <paper-input id="searchBox" value="{{filter}}">
+        <paper-input id="searchBox" no-label-float placeholder="Search Catalog" value="{{filter}}">
           <iron-icon icon="search" prefix></iron-icon>
         </paper-input>
         <paper-toggle-button checked="{{filterByStar}}">Star Only</paper-toggle-button>
