styling for app header

--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -129,8 +129,7 @@
 
 
   <style>
-    app-toolbar {
-      /* Toolbar is the main header, so give it some color */
+    /*app-toolbar {
       background-color: #1E88E5;
       font-family: 'Roboto', Helvetica, sans-serif;
       color: white;
@@ -147,7 +146,7 @@
     }
     paper-tab {
       --paper-tab-ink: #304ffe;
-    }
+    }*/
   </style>
 
   <script>
