--- a/src/life-nav/life-nav.html
+++ b/src/life-nav/life-nav.html
@@ -9,6 +9,9 @@
 <link rel="import" href="../../bower_components/iron-icons/iron-icons.html">
 <link rel="import" href="../../bower_components/iron-icons/social-icons.html">
 
+<link rel="import" href="../../bower_components/paper-styles/default-theme.html">
+<link rel="import" href="../../bower_components/paper-material/paper-material.html">
+
 <link rel="import" href="../../bower_components/paper-listbox/paper-listbox.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item.html">
 <link rel="import" href="../../bower_components/paper-item/paper-item-body.html">
@@ -32,8 +35,18 @@
         text-decoration: none;
       }
 
+      app-header {
+        /*background: var(--primary-background-color);*/
+        /*background: 'magenta';*/
+        font-family: 'Roboto', Helvetica, sans-serif;
+        /*color: white;*/
+        --app-toolbar-font-size: 20px;
+      }
+      app-header-layout {
+        z-index: 10;
+      }
       app-drawer {
-        z-index: 100;
+        z-index: 11;
       }
     </style>
 
