--- a/src/life-nav/life-nav.html
+++ b/src/life-nav/life-nav.html
@@ -35,8 +35,9 @@
         text-decoration: none;
       }
 
-      app-header {
-        /*background: var(--primary-background-color);*/
+      app-header{
+        background: var(--primary-color);
+        color: var(--dark-theme-text-color);;
         /*background: 'magenta';*/
         font-family: 'Roboto', Helvetica, sans-serif;
         /*color: white;*/
