--- a/src/life-controller/life-canvas-controller.html
+++ b/src/life-controller/life-canvas-controller.html
@@ -14,6 +14,9 @@
         @apply(--layout-horizontal);
         @apply(--layout-center);
       }
+      paper-slider {
+        @apply(--layout-flex);
+      }
     </style>
 
     <life-pause-button
