--- a/src/life-catalog/life-catalog.html
+++ b/src/life-catalog/life-catalog.html
@@ -56,7 +56,8 @@
     .patterns {
       @apply(--layout);
       @apply(--layout-wrap);
-      @apply(--layout-center-justified);
+      padding: 0 24px;
+      /*@apply(--layout-center-justified);*/
     }
     .card {
       /*display: inline-block;*/
