update styling for life-brush-editor

--- a/src/life-app/life-app.html
+++ b/src/life-app/life-app.html
@@ -132,6 +132,7 @@
     section[name="playground"] .wrapper {
       @apply(--layout-vertical);
       @apply(--layout-inline);
+      position: relative;
     }
   </style>
 
