--- a/src/life-dialogs/life-settings-dialog.html
+++ b/src/life-dialogs/life-settings-dialog.html
@@ -16,6 +16,25 @@
 
       <h2>Settings</h2>
       <paper-dialog-scrollable>
+        <template is="dom-if" if="[[!signedIn]]">
+          <h3>Sign In</h3>
+          <paper-button on-tap="signIn" disabled="[[disabled]]" class="account">
+            <iron-icon icon="account-circle"></iron-icon>
+            <span>Sign in with Google</span>
+          </paper-button>
+        </template>
+        <template is="dom-if" if="[[signedIn]]">
+          <h3>Sign Out</h3>
+          <div>
+            You are currently signed in as:<br>
+            [[user.displayName]]([[user.email]])
+          </div>
+          <paper-button on-tap="signOut" class="account">
+            <iron-icon icon="account-circle"></iron-icon>
+            <span>Sign out</span>
+          </paper-button>
+        </template>
+
         <h3>Canvas Size</h3>
         <paper-input label="Cell width" value="{{app.width}}" type="number" max="3000"></paper-input>
         <paper-input label="Cell height" value="{{app.height}}" type="number" max="3000"></paper-input>
@@ -59,6 +78,10 @@
       --paper-slider-knob-color: var(--paper-light-blue-500);
       --paper-slider-active-color: var(--paper-light-blue-500);
     }
+    paper-button.account {
+      vertical-align: middle;
+      text-transform: none;
+    }
   </style>
 
   <script>
@@ -93,6 +116,18 @@
           value: 238
         },
 
+        disabled: {
+          type: Boolean,
+          value: false
+        },
+        signedIn: {
+          type: Boolean,
+          value: false
+        },
+        user: {
+          type: Object,
+        }
+
       },
 
       observers: [
@@ -109,8 +144,14 @@
       },
       open: function(){
         this.$.dialog.open();
-      }
+      },
 
+      signIn: function() {
+        this.fire('sign-in');
+      },
+      signOut: function() {
+        this.fire('sign-out');
+      }
     });
   </script>
 </dom-module>
