--- a/src/life-behaviors/life-analytics-behavior.html
+++ b/src/life-behaviors/life-analytics-behavior.html
@@ -1,13 +1,20 @@
 <script type="text/javascript">
   LifeAnalyticsBehavior = {
     sendEvent: function(eventCategory, eventAction, eventLabel) {
+      if (!window.ga) return;
       ga('send', 'event', eventCategory, eventAction, eventLabel);
     },
     sendException: function(description) {
+      if (!window.ga) return;
       ga('send', 'exception', {
         'exDescription': description,
         'exFatal': false
       });
+    },
+    sendPageChange: function(pageName) {
+      if (!window.ga) return;
+      ga('set', 'page', pageName);
+      ga('send', 'pageview');
     },
   };
 </script>
