write about.html

--- a/src/life-about/life-about.html
+++ b/src/life-about/life-about.html
@@ -16,12 +16,23 @@
 
     <paper-material elevation="1">
       <section>
-        <h2>About</h2>
-        <p>Game of life implementation made by with Polymer</p>
+        <h2>About This App</h2>
+        <p>The Game of Life is a cellular automaton devised by the British mathematician John Horton Conway in 1970. A simple algorithm determines the state of cells every frame. <a href="https://en.wikipedia.org/wiki/Conway%27s_Game_of_Life">Learn more</a></p>
+        <p>This app is made by <a href="https://www.polymer-project.org/">Polymer</a>. Source code is available on <a href="https://github.com/Kumassy/life-app">Github</a>.</p>
+      </section>
+      <section>
+        <h2>Patterns</h2>
+        <p>The Game of Life has several patterns that generate interesting animation. You can try over 1000 patterns in this app. The patterns was taken from <a href="http://conwaylife.com/w/index.php?title=Main_Page">LifeWiki</a>.</p>
       </section>
       <section>
         <h2>Author</h2>
-        <p>Kumassy (@kumassy_ , http://kumassy.com)</p>
+        <p>
+          Kumassy
+          <ul>
+            <li>Website: <a href="http://kumassy.com">http://kumassy.com</a></li>
+            <li>Twitter: <a href="https://twitter.com/kumassy_">@kumassy_</a></li>
+          </ul>
+        </p>
       </section>
       <section>
         <h2>Lisence</h2>
