--- a/test/life-catalog/life-catalog_test.html
+++ b/test/life-catalog/life-catalog_test.html
@@ -95,7 +95,7 @@
           element.currentPage = 0;
 
           flush(() => {
-            const starButton = Polymer.dom(element.root).querySelectorAll('.card paper-icon-button')[1];
+            const starButton = Polymer.dom(element.root).querySelectorAll('.card life-icon-button')[1];
 
             assert.isUndefined(catalog[1].starred);
 
