hide share url #23

--- a/src/life-dialogs/life-collection-detail-dialog.html
+++ b/src/life-dialogs/life-collection-detail-dialog.html
@@ -28,7 +28,7 @@
         </div>
         <!-- <span>[[target.createdAt]]</span>
         <span>[[target.updatedAt]]</span> -->
-        <paper-input label="Share URL" value="[[target.shareUrl]]"></paper-input>
+        <!-- <paper-input label="Share URL" value="[[target.shareUrl]]"></paper-input> -->
       </paper-dialog-scrollable>
       <div class="buttons">
         <paper-button class="delete" on-tap="_openConfirmationDialog">Delete</paper-button>
